--- a/index.html
+++ b/index.html
@@ -7,22 +7,133 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- Header -->
     <header>
       <nav>
-        <a href="">
-          <img src="" alt="" />
-          WebStudio
-        </a>
+        <a href="">WebStudio </a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
-        <ul>
-          <li>info@devstudio.com</li>
-          <li>+38 096 111 11 11</li>
-        </ul>
       </nav>
+      <ul>
+        <li>info@devstudio.com</li>
+        <li>+38 096 111 11 11</li>
+      </ul>
     </header>
+    <main>
+      <!-- Hero -->
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <a href="">Замовити послугу</a>
+      </section>
+      <!-- Section Особливості -->
+      <section>
+        <h2>Особливості</h2>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- Section Чим ми займаємось-->
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img src="./images/projImg-01.png" alt="Зображення" width="370" />
+          </li>
+          <li>
+            <img src="./images/projImg-02.png" alt="Зображення" width="370" />
+          </li>
+          <li>
+            <img src="./images/projImg-03.png" alt="Зображення" width="370" />
+          </li>
+        </ul>
+      </section>
+      <!-- Section Наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/IgorDemiyanenko.png"
+                alt="Ігор Дем'яненко"
+                width="270"
+              />
+              <h3>Ігор Дем'яненко</h3>
+              <p>Product Designer</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/OlgaRepina.png"
+                alt="Ольга Рєпіна"
+                width="270"
+              />
+              <h3>Ольга Рєпіна</h3>
+              <p>Frontend Developer</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/MykolaTarasov.png"
+                alt="Микола Тарасов"
+                width="270"
+              />
+              <h3>Микола Тарасов</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/MikhayloYermakov.png"
+                alt="Михайло Єрмаков"
+                width="270"
+              />
+              <h3>Михайло Єрмаков</h3>
+              <p>UI Designer</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="">WebStudio </a>
+      <ul>
+        <li>м. Київ, пр-т Лесі Українки, 26</li>
+        <li>info@devstudio.com</li>
+        <li>+38 096 111 11 11</li>
+      </ul>
+    </footer>
   </body>
 </html>
