add tag address

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- Hero -->
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <a href="">Замовити послугу</a>
+        <button type="button">Замовити послугу</button>
       </section>
       <!-- Section Особливості -->
       <section>
@@ -129,11 +129,11 @@
     </main>
     <footer>
       <a href="">WebStudio </a>
-      <ul>
+      <address>
         <li>м. Київ, пр-т Лесі Українки, 26</li>
-        <li>info@devstudio.com</li>
-        <li>+38 096 111 11 11</li>
-      </ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+      </address>
     </footer>
   </body>
 </html>
