--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
     <footer>
       <a href="">WebStudio </a>
       <address>
-        <li>м. Київ, пр-т Лесі Українки, 26</li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <ul>
+          <li>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
