change images to *.jpg

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="./images/projImg-01.png" alt="Зображення" width="370" />
+            <img src="./images/projImg-01.jpg" alt="Зображення" width="370" />
           </li>
           <li>
-            <img src="./images/projImg-02.png" alt="Зображення" width="370" />
+            <img src="./images/projImg-02.jpg" alt="Зображення" width="370" />
           </li>
           <li>
-            <img src="./images/projImg-03.png" alt="Зображення" width="370" />
+            <img src="./images/projImg-03.jpg" alt="Зображення" width="370" />
           </li>
         </ul>
       </section>
@@ -83,7 +83,7 @@
           <li>
             <a href="">
               <img
-                src="./images/IgorDemiyanenko.png"
+                src="./images/IgorDemiyanenko.jpg"
                 alt="Ігор Дем'яненко"
                 width="270"
               />
@@ -94,7 +94,7 @@
           <li>
             <a href="">
               <img
-                src="./images/OlgaRepina.png"
+                src="./images/OlgaRepina.jpg"
                 alt="Ольга Рєпіна"
                 width="270"
               />
@@ -105,7 +105,7 @@
           <li>
             <a href="">
               <img
-                src="./images/MykolaTarasov.png"
+                src="./images/MykolaTarasov.jpg"
                 alt="Микола Тарасов"
                 width="270"
               />
@@ -116,7 +116,7 @@
           <li>
             <a href="">
               <img
-                src="./images/MikhayloYermakov.png"
+                src="./images/MikhayloYermakov.jpg"
                 alt="Михайло Єрмаков"
                 width="270"
               />
