--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="">WebStudio </a>
+        <a href=""><span>Web</span>Studio </a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -128,13 +128,11 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio </a>
+      <a href=""><span>Web</span>Studio </a>
       <address>
-        <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        м. Київ, пр-т Лесі Українки, 26<br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
