edit section Hero coment

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </header>
     <main>
-      <!-- Hero -->
+      <!-- Section Hero -->
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
