--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,60 +10,62 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio </a>
+        <a href="./index.html">WebStudio </a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <ul>
         <li>info@devstudio.com</li>
-        <li>+38 096 111 11 11</li>
+        <li>+1 212-772-4150</li>
       </ul>
     </header>
     <main>
       <!-- Section Hero -->
       <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
+        <button type="button">Request our service</button>
       </section>
-      <!-- Section Особливості -->
+      <!-- Section Features -->
       <section>
-        <h2>Особливості</h2>
+        <h2>Features</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3>ATTENTION TO DETAILS</h3>
             <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
+              We go into all the details and processes of your business to
+              develop a customized solution.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3>PUNCTUALITY</h3>
             <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
+              With us, you can feel safe and secure. An important principle of
+              the company: respect your time and respect the agreed deadlines.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3>PLANNING</h3>
             <p>
-              Так само консультація з широким активом значною мірою зумовлює.
+              You will be able to observe and participate in every phase of
+              solution development and implementation. активом значною мірою
+              зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3>MODERN TECHNOLOGIES</h3>
             <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
+              We use innovative tools to solve assigned tasks. It's time to
+              simplify work processes.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Section Чим ми займаємось-->
+      <!-- Section What we do-->
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2>What we do</h2>
         <ul>
           <li>
             <img src="./images/projImg-01.jpg" alt="Зображення" width="370" />
@@ -76,18 +78,18 @@
           </li>
         </ul>
       </section>
-      <!-- Section Наша команда-->
+      <!-- Section Our Team-->
       <section>
-        <h2>Наша команда</h2>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <a href="">
               <img
                 src="./images/IgorDemiyanenko.jpg"
-                alt="Ігор Дем'яненко"
+                alt="Christopher Walker"
                 width="270"
               />
-              <h3>Ігор Дем'яненко</h3>
+              <h3>Christopher Walker</h3>
               <p>Product Designer</p>
             </a>
           </li>
@@ -95,10 +97,10 @@
             <a href="">
               <img
                 src="./images/OlgaRepina.jpg"
-                alt="Ольга Рєпіна"
+                alt="Kylie Evans"
                 width="270"
               />
-              <h3>Ольга Рєпіна</h3>
+              <h3>Kylie Evans</h3>
               <p>Frontend Developer</p>
             </a>
           </li>
@@ -106,10 +108,10 @@
             <a href="">
               <img
                 src="./images/MykolaTarasov.jpg"
-                alt="Микола Тарасов"
+                alt="Ryan Harris"
                 width="270"
               />
-              <h3>Микола Тарасов</h3>
+              <h3>Ryan Harris</h3>
               <p>Marketing</p>
             </a>
           </li>
@@ -117,22 +119,24 @@
             <a href="">
               <img
                 src="./images/MikhayloYermakov.jpg"
-                alt="Михайло Єрмаков"
+                alt="Tyler Moore"
                 width="270"
               />
-              <h3>Михайло Єрмаков</h3>
+              <h3>Tyler Moore</h3>
               <p>UI Designer</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
+    <!-- Footer -->
     <footer>
-      <a href=""><span>Web</span>Studio </a>
+      <a href="">WebStudio </a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26<br />
+        695 Park Ave, New York, NY 10065, <br />
+        United States
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="tel:+12127724150">+1 212-772-4150 </a>
       </address>
     </footer>
   </body>
