divide adress in footer

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
       <address>
         695 Park Ave, New York, NY 10065, <br />
         United States
+      </address>
+      <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
         <a href="tel:+12127724150">+1 212-772-4150 </a>
       </address>
