--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </ul>
       </nav>
       <ul>
-        <li>info@devstudio.com</li>
-        <li>+1 212-772-4150</li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+12127724150">+1 212-772-4150 </a></li>
       </ul>
     </header>
     <main>
@@ -35,30 +35,28 @@
           <li>
             <h3>ATTENTION TO DETAILS</h3>
             <p>
-              We go into all the details and processes of your business to
-              develop a customized solution.
+              We go into all the details and processes of your business to develop a customized
+              solution.
             </p>
           </li>
           <li>
             <h3>PUNCTUALITY</h3>
             <p>
-              With us, you can feel safe and secure. An important principle of
-              the company: respect your time and respect the agreed deadlines.
+              With us, you can feel safe and secure. An important principle of the company: respect
+              your time and respect the agreed deadlines.
             </p>
           </li>
           <li>
             <h3>PLANNING</h3>
             <p>
-              You will be able to observe and participate in every phase of
-              solution development and implementation. активом значною мірою
-              зумовлює.
+              You will be able to observe and participate in every phase of solution development and
+              implementation. активом значною мірою зумовлює.
             </p>
           </li>
           <li>
             <h3>MODERN TECHNOLOGIES</h3>
             <p>
-              We use innovative tools to solve assigned tasks. It's time to
-              simplify work processes.
+              We use innovative tools to solve assigned tasks. It's time to simplify work processes.
             </p>
           </li>
         </ul>
@@ -68,13 +66,21 @@
         <h2>What we do</h2>
         <ul>
           <li>
-            <img src="./images/projImg-01.jpg" alt="Зображення" width="370" />
+            <img
+              src="./images/projImg-01.jpg"
+              alt="Desktop, algorithm, tablet PC, markup on screen"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/projImg-02.jpg" alt="Зображення" width="370" />
+            <img
+              src="./images/projImg-02.jpg"
+              alt="mobile device, mobile interface layout on laptop"
+              width="370"
+            />
           </li>
           <li>
-            <img src="./images/projImg-03.jpg" alt="Зображення" width="370" />
+            <img src="./images/projImg-03.jpg" alt="color picker on tablet PC" width="370" />
           </li>
         </ul>
       </section>
@@ -84,44 +90,28 @@
         <ul>
           <li>
             <a href="">
-              <img
-                src="./images/IgorDemiyanenko.jpg"
-                alt="Christopher Walker"
-                width="270"
-              />
+              <img src="./images/IgorDemiyanenko.jpg" alt="Christopher Walker" width="270" />
               <h3>Christopher Walker</h3>
               <p>Product Designer</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img
-                src="./images/OlgaRepina.jpg"
-                alt="Kylie Evans"
-                width="270"
-              />
+              <img src="./images/OlgaRepina.jpg" alt="Kylie Evans" width="270" />
               <h3>Kylie Evans</h3>
               <p>Frontend Developer</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img
-                src="./images/MykolaTarasov.jpg"
-                alt="Ryan Harris"
-                width="270"
-              />
+              <img src="./images/MykolaTarasov.jpg" alt="Ryan Harris" width="270" />
               <h3>Ryan Harris</h3>
               <p>Marketing</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img
-                src="./images/MikhayloYermakov.jpg"
-                alt="Tyler Moore"
-                width="270"
-              />
+              <img src="./images/MikhayloYermakov.jpg" alt="Tyler Moore" width="270" />
               <h3>Tyler Moore</h3>
               <p>UI Designer</p>
             </a>
@@ -133,12 +123,14 @@
     <footer>
       <a href="">WebStudio </a>
       <address>
-        695 Park Ave, New York, NY 10065, <br />
-        United States
-      </address>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+12127724150">+1 212-772-4150 </a>
+        <p>
+          695 Park Ave, New York, NY 10065, <br />
+          United States
+        </p>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+12127724150">+1 212-772-4150 </a></li>
+        </ul>
       </address>
     </footer>
   </body>
